# lakebase

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-lakebase.yml
lakebase/: cli.py  project.py
metadata/: dev.yml  prd.yml
